<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sisc.claudiu.SMSBuddySendMessageActivity"
    tools:showIn="@layout/activity_send_sms">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sendButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/phoneNumberTextHint"
            android:inputType="phone"
            android:layout_column="1"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/phoneNumberText"
            android:ems="10"
            android:hint="@string/messageTextHint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="5"
            android:layout_column="1"
            android:elegantTextHeight="true"
            android:gravity="start"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/messageText"
            android:layout_toRightOf="@+id/messageText"
            android:onClick="sendSMS"
            android:text="@string/buttonSendText"
            android:layout_column="1"
            android:layout_weight="1" />
    </TableRow>
</TableLayout>
